Update Clock interface, remove TimeProvider (#2998)
Fixes #2992